--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -483,7 +483,7 @@ CHOOSE_WORKBENCH_IMPORT_FILE=Select a OnRamp Data Import File
 WB_TEMPLATE_INFO=DataSet Template Information
 WB_DATASET_INFO=DataSet Information
 WB_NO_MAPPING=No Mapping
-WB_DATFILE_COLUMNS=Data File Columns
+WB_MAPPING_COLUMNS=Mappings
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
 WBT_DEL_TITLE=Delete OnRamp Template
