--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -516,6 +516,12 @@ WB_CREATE_NEW_TEMPLATE=Create New Template
 WB_CREATINGMAP=Creating Map...
 WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
+WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
+WB_GOOGLE_BIRD_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/BirdCircle.png
+WB_GOOGLE_ENTO_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/EntoCircle.png
+WB_GOOGLE_PLANT_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/PlantCircle.png
+WB_GOOGLE_MAMMAL_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/MammalCircle.png
+WB_GOOGLE_HERP_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/HerpCircle.png
 
 #################################
 # Wizards
