--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -479,7 +479,8 @@ WB_NEW_DATASET=New DataSet
 WB_NEW_TEMPLATE=New Template
 WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
-CHOOSE_WORKBENCH_IMPORT_FILE=Select a OnRamp Data Import File
+CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
+CHOOSE_WORKBENCH_EXPORT_FILE=Specify an OnRamp Data Export File
 WB_TEMPLATE_INFO=DataSet Template Information
 WB_DATASET_INFO=DataSet Information
 WB_NO_MAPPING=No Mapping
@@ -516,6 +517,7 @@ WB_CREATE_NEW_TEMPLATE=Create New Template
 WB_CREATINGMAP=Creating Map...
 WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
+WB_EXPORT_DATA=Export Data
 WB_EDIT_CONTROL=Configure Edit Control
 WB_SELECT_ACTION_TITLE=Select an Action
 WB_EDIT_MAPPINGS=Edit Column Mappings
@@ -528,7 +530,6 @@ WB_GOOGLE_ENTO_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/im
 WB_GOOGLE_PLANT_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/PlantCircle.png
 WB_GOOGLE_MAMMAL_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/MammalCircle.png
 WB_GOOGLE_HERP_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/HerpCircle.png
-
 
 #################################
 # Wizards
