--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -522,7 +522,7 @@ WB_EDIT_CONTROL=Configure Edit Control
 WB_SELECT_ACTION_TITLE=Select an Action
 WB_EDIT_MAPPINGS=Edit Column Mappings
 WB_EDIT_TEMPLATE_INFO=Edit Template Information
-WB_CREATE_EMPTY_DATASET=Create Empty Spreadsheet from Template
+WB_CREATE_EMPTY_DATASET=Create Empty Spreadsheet from the '%s' Template
 
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
 WB_GOOGLE_BIRD_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/BirdCircle.png
