--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -517,6 +517,7 @@ WB_CREATE_NEW_TEMPLATE=Create New Template
 WB_CREATINGMAP=Creating Map...
 WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
+WB_DO_BIOGEOMANCER_LOOKUP=Georeference using BioGeomancer
 WB_EXPORT_DATA=Export Data
 WB_EDIT_CONTROL=Configure Edit Control
 WB_SELECT_ACTION_TITLE=Select an Action
@@ -524,6 +525,7 @@ WB_EDIT_MAPPINGS=Edit Column Mappings
 WB_EDIT_TEMPLATE_INFO=Edit Template Information
 WB_CREATE_EMPTY_DATASET=Create Empty Spreadsheet from the '%s' Template
 
+# Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
 WB_GOOGLE_BIRD_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/BirdCircle.png
 WB_GOOGLE_ENTO_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/EntoCircle.png
