--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -717,3 +717,14 @@ PARTIAL_DATE_FULL=Date
 PARTIAL_DATE_MONTH=Mon / Year
 PARTIAL_DATE_YEAR=Year
 
+#################################
+# Find/Replace Dialog
+#################################
+FIND=Find
+NEXT=Next
+PREVIOUS=Previous
+REPLACE=Replace
+REPLACEALL=Replace All
+MATCHCASE=Match Case
+WRAP=Wrap Search
+PHRASENOTFOUND=Phrase not found
