--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -728,3 +728,15 @@ REPLACEALL=Replace All
 MATCHCASE=Match Case
 WRAP=Wrap Search
 PHRASENOTFOUND=Phrase not found
+
+#################################
+# Csv import dialog
+#################################
+DELIM_EXPLAIN=This screen let you set the delimiters your data contains.  You can see how your text is affected in teh preview below.
+SELECT_DELIMS=Select a delimiter
+TAB=Tab
+SPACE=Space
+OTHER=Other
+COMMA=Comma
+SEMICOLON=Semicolon
+Finish=Finish
