--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -479,7 +479,6 @@ WB_DATASET=DataSet
 WB_NEW_DATASET=New DataSet
 WB_NEW_TEMPLATE=New Template
 WB_IMPORTDATA=Import Data
-WB_EXPORTDATA=Export Data
 Label_Entry=From Labels
 CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
 CHOOSE_WORKBENCH_EXPORT_FILE=Specify an OnRamp Data Export File
@@ -521,6 +520,7 @@ WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
 WB_DO_BIOGEOMANCER_LOOKUP=Georeference using BioGeomancer
 WB_EXPORT_DATA=Export Data
+WB_EXPORT_TEMPLATE=Export Template
 WB_EDIT_CONTROL=Configure Edit Control
 WB_SELECT_ACTION_TITLE=Select an Action
 WB_EDIT_MAPPINGS=Edit Column Mappings
