--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -506,14 +506,14 @@ WB_REUSE_MAPPING=Reuse DataSet Mapping
 CHOOSE_WORKBENCH_IMPORT_FILE=Select a File to Import
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
 WB_DATASET_INFO=DataSet Properties
-WB_NO_MAPPING=Not Imported
+WB_NO_MAPPING=To Be Discarded
 WB_MAPPING_COLUMNS=Mappings
 WB_COLUMNS=DataSet Columns
 WB_IMPORTED_COLUMNS=Unmapped Imported Columns
 WB_MAP_BTN=Map
 WB_UNMAP_BTN=Unmap
 WB_REMOVE_COLUMNS=Columns To Be Removed
-WB_SCHEMA=Data Fields
+WB_DATA_TYPE=Data Type
 WB_DATASET_COLUMNS=DataSet Columns
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
