--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -26,6 +26,7 @@ HelpMneu=H
 SelectAll=Select All
 DeselectAll=Deselect All
 Error=Error
+Warning=Warning
 Delete=Delete
 Open=Open
 Email=Email
@@ -814,6 +815,11 @@ PHRASENOTFOUND=Phrase not found
 # BioGeomancer stuff
 #################################
 NO_BG_RESULTS=BioGeomancer returned no results
+
+#################################
+# Google Earth stuff
+#################################
+NOT_ALL_MAPPED=Not all placemarks could be mapped
 
 #################################
 # Csv import dialog
