--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -41,7 +41,7 @@ Continue=Continue
 #################################
 Startup=Welcome
 Workbench=Workbench
-workbench_hint=Create and edit an Workbench DataSet
+workbench_hint=Create and edit an Workbench Data Set
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
 Taxon_Tree=Taxonomy Tree
@@ -497,54 +497,55 @@ newpicklist=New Pick List
 #################################
 Templates=Templates
 WB_WELCOME=Welcome to the WorkBench
-WB_DATASETS=DataSets
-WB_DATASET=DataSet
-WB_NEW_DATASET=New DataSet
-WB_NEW_DS_FROM_TMPL=New DataSet Structure
+WB_DATASETS=Data Sets
+WB_DATASET=Data Set
+WB_NEW_DATASET=New Data Set
+WB_NEW_DS_FROM_TMPL=Reuse Column Headings
 WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
-WB_REUSE_MAPPING=Reuse DataSet Mapping
+WB_REUSE_MAPPING=Reuse Data Set Mapping
 CHOOSE_WORKBENCH_IMPORT_FILE=Select a File to Import
 CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
-WB_DATASET_INFO=DataSet Properties
+WB_CHOOSE_IMAGES=Choose Images to Import
+WB_DATASET_INFO=Data Set Properties
 WB_NO_MAPPING=To Be Discarded
 WB_MAPPING_COLUMNS=Mappings
-WB_COLUMNS=DataSet Columns
+WB_COLUMNS=Data Set Columns
 WB_IMPORTED_COLUMNS=Unmapped Imported Columns
 WB_MAP_BTN=Map
 WB_UNMAP_BTN=Unmap
 WB_REMOVE_COLUMNS=Columns To Be Removed
 WB_DATA_TYPE=Data Type
-WB_DATASET_COLUMNS=DataSet Columns
+WB_DATASET_COLUMNS=Data Set Columns
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
 WB_NEW_DATASET_MAPPINGS=New Mapping
-WBT_DELBTN=Proceed
 WB_ADD_ROW=Add a row
 WB_INSERT_ROW=Insert a row
 WB_CLEAR_CELLS=Clear Cells
 WB_DELETE_ROW=Delete a row(s)
-WB_CHOOSE_DATASET=Choose a DataSet
+WB_CHOOSE_DATASET=Choose a Data Set
 WB_SELECT_FIELD_TITLE=Select a Field
 WB_SELECT_FIELD=Choose which field to report on:
 WB_CHART_TITLE=%s Counts
 WB_TOP10=Top 10
 WB_ADD_MAPPING_ITEM=Add New Column
 WB_REMOVE_MAPPING_ITEM=Remove New Column
+WB_IMAGE=Image
 
-WB_CHOOSE_DATASET_REUSE= Choose a DataSet to reuse the mappings
-WB_CHOOSE_DATASET_REUSE_TITLE=Reuse DataSet Mapping
+WB_CHOOSE_DATASET_REUSE= Choose a Data Set to reuse the mappings
+WB_CHOOSE_DATASET_REUSE_TITLE=Reuse Data Set Mapping
 
-WB_MAPPING_EDITOR=DataSet Mapping Editor
-WB_IMPORT_MAPPING_EDITOR=Import DataSet Mapper
-WB_NEW_DATASET_MAPPER=New DataSet Mapper
+WB_MAPPING_EDITOR=Data Set Mapping Editor
+WB_IMPORT_MAPPING_EDITOR=Import Data Set Mapper
+WB_NEW_DATASET_MAPPER=New Data Set Mapper
 
 WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
-WB_SHOW_IMAGES=Show Images
-WB_HIDE_IMAGES=Hide Images
+WB_SHOW_IMG_WIN=Show Image Window
+WB_HIDE_IMG_WIN=Hide Image Window
 WB_SHOW_MAP=Show map of selected rows
-WB_GEO_REF_DATA_MAP=Geo Refs Data Map
+WB_GEO_REF_DATA_MAP=Georeference Map
 WB_SHOW_IN_GOOGLE_EARTH=Show in Google Earth
 WB_IMPORT_CARDS=Import Images
 WB_REUSE=Reuse
@@ -553,17 +554,18 @@ WB_CREATINGMAP=Creating Map...
 WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
 WB_DO_BIOGEOMANCER_LOOKUP=Georeference using BioGeomancer
-WB_EXPORT_DATA=Export DataSet
+WB_EXPORT_DATA=Export Data Set
 WB_EXPORT_TEMPLATE=Export Excel Template
-WB_EDIT_CONTROL=Form Control Properties
+WB_EDIT_CONTROL=Edit Form Properties
 WB_SELECT_ACTION_TITLE=Select an Action
 WB_EDIT_MAPPINGS=Edit Column Mappings
-WB_EDIT_DATASET_MAPPING=Edit DataSet Mapping
+WB_EDIT_DATASET_MAPPING=Edit Data Set Mapping
 WB_EDIT_DATASET_MAPPING_MNEU=D
 WB_CREATE_EMPTY_DATASET=Create Empty Spreadsheet from the '%s' Template
 WorkbenchDataItem=Workbench Data Item
 WorkbenchTemplate=Workbench Template
 WorkbenchTemplateMappingItem=Workbench Template Mapping Item
+WB_FIELDS=Specify Fields
 WB_FILE_FORMAT=File Format?
 WB_EDIT_PROPS=Edit Properties
 WB_EDIT_PROPS_MNEU=E
@@ -574,7 +576,7 @@ WB_ERROR_IMAGE_TOOLARGE=The image was too large (16 Megabyte limit).
 WB_ERROR_IMAGE_MEMORY=Specify ran out of memory trying to load the image.
 WB_ERROR_IMAGE_GENERIC=Error Loading Image (No reason given.)
 WB_STOP_LOADING=Stop Loading Images
-WB_CONVERT_GEO_FORMAT=Convert Geo Ref Formats
+WB_CONVERT_GEO_FORMAT=Convert Georeference Formats
 WB_PARSE_FILE_ERROR=The file `%s` could not be properly read in, it is most likely the wrong format.
 WB_IMAGE_WINDOW=Image Window
 WB_INITIAL_HTML=help/SpecifyHelp/Workbench/Overview.html
@@ -583,18 +585,18 @@ WB_NEWDATA_TOO_LONG=The data in the field '%s' exceeds %d characters.
 WB_TEXTFIELD=Text Field
 WB_TEXTAREA=Text Area
 LOADING_MAP=Loading Map...
-WB_ERROR_SAVING=Error saving the DataSet.
+WB_ERROR_SAVING=Error saving the Data Set.
 WB_SAVED='%s' was saved.
 WB_SAVING=Saving %s...
 WB_EDIT_DLG_TITLE=%s Properties
-WB_SAVE_DATASET_TT=Save '%s' DataSet
+WB_SAVE_DATASET_TT=Save '%s' Data Set
 WB_DELETING_DATASET=Deleting %s...
 WB_DELETED_DATASET=Deleted %s
 WB_LOADING_DATASET=Loading %s...
 WB_SAVED_MAPPINGS=Saved Mapping Information.
 WB_MOVE_UP=Move item up in the list
 WB_MOVE_DOWN=Move item down in the list
-WB_DATASET_EXISTS=DataSet Name `%s` exists.
+WB_DATASET_EXISTS=Data Set Name `%s` exists.
 WB_MODIFIED_IMPORT_DATA=Import Status Report
 WB_ROW=Row
 WB_COLUMN=Column
@@ -603,14 +605,17 @@ WB_TRUNCATIONS=The following values were truncated during import:
 WB_ALWAYS_ON_TOP=Keep window on top
 
 # ToolTips
-WB_CLICK_EDIT_DATA_TT=Click to edit the DataSet
+WB_CLICK_EDIT_DATA_TT=Click to edit the Data Set
 WB_IMPORTDATA_TT=Import data from a Excel or CSV file
-WB_IMPORTCARDS_TT=Create new DataSet from a one or more images
-WB_REUSE_MAPPING_TT=Create new DataSet resuing a mapping from an existing DataSet
-WB_NEW_DATASET_TT=Create a new DataSet with a new mapping
-WB_EXPORT_DATA_TT=Export the DataSet to an MS-Excel file
+WB_IMPORTCARDS_TT=Create new Data Set from a one or more images
+WB_REUSE_MAPPING_TT=Create new Data Set resuing a mapping from an existing Data Set
+WB_NEW_DATASET_TT=Create a new Data Set with a new mapping
+WB_EXPORT_DATA_TT=Export the Data Set to an MS-Excel file
 WB_EXPORT_TEMPLATE_TT=Create an empty MS-Excel file by exporting the DatSet's Columns definitions 
-WB_ADDITIONAL_FIELDS_REQD=Additional fields required in DataSet Mapping
+WB_ADDITIONAL_FIELDS_REQD=Additional fields required in Data Set Mapping
+
+WB_SHOW_GRID_VIEW=Show Grid View
+WB_SHOW_FORM_VIEW=Show Form View
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
@@ -845,7 +850,7 @@ IMPORT_CVS=Import from CSV
 IMPORT_XLS=Import from XLS
 FILE_PREVIEW= Preview of file
 FILE_IMPORT=Import File
-DATA_IMPORT_OPS=Data import options
+DATA_IMPORT_OPS=Data Import Options
 DEFAULT_COLUMN_NAME=Column
 DATA_IMPORT_ERROR=There are problems with the data you are wanting to import.  Details...
 DATA_IMPORT_ISSUES=Data Import Problems
@@ -860,7 +865,7 @@ DDMMMM=DD MM.MM (32 45.714)
 DDMMSS=DD MM SS.SS (32 45 42.84)
 GeoRefConv=Georeference Format Converter
 GeoRefConvDesc=Choose an output format from the following list
-NoGeoRefColumns=DataSet does not contain georeference columns
+NoGeoRefColumns=Data Set does not contain georeference columns
 ID=ID
 Country=Country
 Adm1=Adm 1
