--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -825,6 +825,7 @@ NO_BG_RESULTS=BioGeomancer returned no results
 # Google Earth stuff
 #################################
 NOT_ALL_MAPPED=Not all placemarks could be mapped
+GOOGLE_EARTH_ERROR=An error occurred while opening Google Earth.  Please verify that it is properly installed.
 
 #################################
 # Csv import dialog
