--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -252,6 +252,7 @@ TaxonTree=Taxonomy Trees
 TaxonMenu=Taxonomy Trees
 TaxonMnemonic=R
 TaxonStarterPaneText=This is the taxonomy tree editor
+TaxonTreeRelationshipMsg=%s is now a synonym of %s
 
 LocationTree=Location Trees
 LocationMenu=Location Trees
