--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -810,6 +810,7 @@ Borrow=Borrow
 BorrowAgent=Borrow Agent
 BorrowMaterial=Borrow Material
 BorrowReturnMaterial=Borrow Return Material
+CatalogNumberingScheme=Catalog Numbering Scheme
 Collection=Collection
 CollectingEvent=Collecting Event
 CollectingEventAttr=Collecting Event Attr
@@ -817,6 +818,8 @@ CollectingTrip=Collecting Trip
 CollectionObject=Collection Object
 CollectionObjectAttr=Collection Object Attr
 CollectionObjectCitation=Collection Object Citation
+CollectionRelationship=Collection Relationship
+CollectionRelType=Collection Relationship Type
 CollectionType=Collection Type
 Collector=Collector
 ColObjAttributes=Collection Object Attributes
