--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -68,6 +68,12 @@ Labels=Labels
 labels_hint=Create and Print Labels
 Reports=Reports
 reports_hint=Create and Print Reports
+REPORT_TT=Print Report
+CREATE_REPORT_TT=Create New Report
+EDIT_REPORT_TT=Edit Report
+LABEL_TT=Print Label
+CREATE_LABEL_TT=Create New Label
+EDIT_LABEL_TT=Edit Label
 Interactions=Interactions
 interactions_hint=Create, Edit Loans, Gifts, and Exchanges
 search_hint=Search for any data in the collection
